<resources>
    <string name="app_name">Ready App Clone</string>

    <!-- Login Screen -->
    <string name="welcome_title">Welcome to Queue System</string>
    <string name="login_subtitle">Login your cloud account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="powered_by">Powered by</string>

    <!-- Terminal Screen -->
    <string name="select_company_title">Select your company</string>
    <string name="select_company_subtitle">Please select your company</string>
    <string name="hint_select_company">Select your company</string>
    <string name="hint_select_terminal">Select your terminal</string>
    <string name="btn_connect">Connect to your terminal</string>

    <!-- Home Screen -->
    <string name="store_location">Store Location</string>
    <string name="tab_all">All</string>
    <string name="tab_pickup">Pick up</string>
    <string name="tab_walkin">Walk in</string>
    <string name="tab_delivery">Delivery</string>
    <string name="tab_takeaway">Take Away</string>
    <string name="status_ready">Ready</string>
    <string name="status_recall">Re-call</string>

    <!-- Setting Screen -->
    <string name="setting_title">Setting</string>
    <string name="languages">Languages</string>
    <string name="log_out">Log Out</string>

    <!-- Select Language Screen -->
    <string name="select_language_title">SELECT LANGUAGE</string>
    <string name="lang_english">English</string>
    <string name="lang_khmer">ខ្មែរ</string>
    <string name="lang_khmer_sub">Khmer</string>
    <string name="lang_chinese">中文</string>
    <string name="lang_chinese_sub">Chinese</string>
</resources>