<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp">

    <!--Hero Illustration-->
    <ImageView
        android:id="@+id/ic_login_logo"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_login_logo"
        android:scaleType="fitCenter"
        android:contentDescription="Logo"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:text="@string/welcome_title"
        android:textColor="#1A1A1A"
        android:textSize="22sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:text="@string/login_subtitle"
        android:textColor="#888888"
        android:textSize="14sp"
        />

        <!-- USERNAME — now matches password style exactly -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxStrokeColor="@color/stroke_color_selector"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:hintTextColor="#888888"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- PASSWORD — same attributes -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxStrokeColor="@color/stroke_color_selector"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:hintTextColor="#888888"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#AAAAAA">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:backgroundTint="@color/btn_connect_selector"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textColor="#AAAAAA"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/ivMonakomLogo"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:adjustViewBounds="true"
        android:contentDescription="Monakom Technology"
        android:src="@drawable/ic_logo_monakom"
        android:scaleType="fitCenter" />

    </LinearLayout>

</LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>